--- a/css/lib/12bool.css
+++ b/css/lib/12bool.css
@@ -11,13 +11,89 @@
     margin: 0 auto;
 }
 
+/* container flessibili */
 .container-fluid{
     width: 100%;
     max-width: 100%;
 }
 
+/* la riga avrà flex */
 .row{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+/* tutte le colonne non si rimpiccioliscono, ne ingrandiscono e partono da una grandezza prestabilita */
+[class*="col-"]{
+    flex: 0 0 auto;
+}
+
+/* colonna flessibile (si adatta rispetto allo spazio che le altre lasciano)*/
+.col{
+    flex-grow: 1;
+    flex-basis: 0;
+    max-width: 100%;
+}
+
+/* colonne specifiche */
+.col-1{
+    flex-basis: calc(100% / 12 * 1);
+    max-width: calc(100% / 12 * 1);
+}
+
+.col-2{
+    flex-basis: calc(100% / 12 * 2);
+    max-width: calc(100% / 12 * 2);
+}
+
+.col-3{
+    flex-basis: calc(100% / 12 * 3);
+    max-width: calc(100% / 12 * 3);
+}
+
+.col-4{
+    /* 33% */
+    flex-basis: calc(100% / 12 * 4);
+    max-width: calc(100% / 12 * 4);
+}
+
+.col-5{
+    flex-basis: calc(100% / 12 * 5);
+    max-width: calc(100% / 12 * 5);
+}
+
+.col-6{
+    /* 50 */
+    flex-basis: calc(100% / 12 * 6);
+    max-width: calc(100% / 12 * 6);
+}
+
+.col-7{
+    flex-basis: calc(100% / 12 * 7);
+    max-width: calc(100% / 12 * 7);
+}
+
+.col-8{
+    flex-basis: calc(100% / 12 * 8);
+    max-width: calc(100% / 12 * 8);
+}
+
+.col-9{
+    flex-basis: calc(100% / 12 * 9);
+    max-width: calc(100% / 12 * 9);
+}
+
+.col-10{
+    flex-basis: calc(100% / 12 * 10);
+    max-width: calc(100% / 12 * 10);
+}
+.col-11{
+    flex-basis: calc(100% / 12 * 11);
+    max-width: calc(100% / 12 * 11);
+}
+
+.col-12{
+    flex-basis: calc(100% / 12 * 12);
+    max-width: calc(100% / 12 * 12);
 }
