--- a/css/lib/12bool.css
+++ b/css/lib/12bool.css
@@ -145,3 +145,9 @@
     margin-left: calc(100% / 12 * 11);
 }
 
+
+
+/* regole aggiuntive flex oriented */
+.between{
+    justify-content: space-between;
+}
