Completamento sezione "Esercizi per casa"

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .box{
     background-color: blue;
     width: 100%;
+    min-height: 40px;
     color: white;
     text-align: center;
     padding: 10px;
