--- a/BONUS/css/lib/12bool.css
+++ b/BONUS/css/lib/12bool.css
@@ -152,6 +152,10 @@
     justify-content: space-between;
 }
 
+.around{
+    justify-content: space-around;
+}
+
 .center{
     justify-content: center;
 }
